# mochi-converter

./: .gitignore  LICENSE  README.md  README.rst  config.example.yaml  pyproject.toml  template.md
mochi_converter/: __init__.py  cli.py  convert.py  main.py
tests/: test_e2e.py
